--- a/stylesheets/scss/base/_media-queries.scss
+++ b/stylesheets/scss/base/_media-queries.scss
@@ -20,6 +20,10 @@
       justify-content: center;
     }
   }
+
+  .header__location {
+    box-shadow: none ;
+  }
 } 
 
 @media (min-width: 769px) {
