--- a/stylesheets/scss/layout/_header.scss
+++ b/stylesheets/scss/layout/_header.scss
@@ -2,7 +2,6 @@
 @use '../utils/mixins' as * ; 
 
 .header { 
-
     &__title {
         font-family: shrikhand , serif ; 
         font-size: 24px; 
@@ -11,13 +10,15 @@
         padding: 18px 0 6px 0;
         margin: 0; 
 
-        box-shadow: 0 2px 5px #b8b8b8;
+        // box-shadow: 0 2px 5px #b8b8b8; 
+        
     }
 
     &__location {
         @include alignx-xycenter; 
         height: 44px; 
         background: #f0f0f0; 
+        box-shadow: #b8b8b8 0 8px 6px -6px inset ;
     }
 
     &__location * {
